<resources>
    <string name="app_name" translatable="false">My Manager App</string>


    <string name="enter_player_name">enter_player_name</string>

    <string name="buttonSave">Add Player</string>
    <string name="deleteplayer">Delete Player</string>


    <string name="splash_screen_description">bucket for splash screen</string>

    <!-- Button Text Strings -->

    <string name="save_player">Update Player</string>


    <!-- Map Strings -->
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deletePlayer">Delete Placemark</string>
    <string name="title_activity_placemark_maps">Map of All Placemarks</string>

    <!-- Notification Strings -->
    <string name="player_activity_started">Player Activity started…</string>

    <string name="enter_player_tittle">Please Enter a Player Name</string>
    <string name="player_add_cancelled">player add cancelled</string>


    <!-- Menu Strings -->
    <string name="menu_addPlayer">Add Player</string>
    <string name="menu_cancelPlayer">Cancel Player</string>

    <!--  strings in login activity  -->
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="logout_button_text">LOGOUT</string>
    <string name="user_text_profile">User:</string>
    <string name="guest_gmail_com">guest@gmail.com</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>

    <!--  strings in register activity  -->
    <string name="register">REGISTER</string>
    <string name="username_hint">username</string>
    <string name="already_have_an_account">Already have an account ?</string>

    <!--  strings in list DB activity  -->
    <string name="floatingButtonDescription">fab for adding experience</string>
    <string name="button_openAddActivity">Create your experience</string>
    <string name="button_saveExperience">Update Experience</string>
    <string name="achieved">\"Achieved \"</string>
    <string name="notAchieved">\"Not yet achieved \"</string>
    <string name="choose_category">Choose Category</string>
    <string name="search">Search</string>
    <string name="about_us">About us</string>
    <string name="button_location">Set Location</string>

    <string name="profile_text">Profile</string>
    <!--  images  -->
    <string name="select_placemark_image">Select placemark image</string>


    <!-- Button Text Strings -->

    <string name="save_placemark">Save Placemark</string>
    <string name="button_addImage"> Add Image </string>
    <string name="change_player_image">Change Image</string>

    <string name="button_addStats">Add Stats</string>

    <!-- Notification Strings -->
    <string name="placemark_activity_started">Placemark Activity started…</string>
    <string name="placemark_add_cancelled">Placemark Add Cancelled</string>
    <string name="enter_placemark_title">Please Enter a Placemark Title</string>


    <!-- Menu Strings -->
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="menu_mapPlayer">Map of Placemarks</string>

    <!-- Hint Strings -->
    <string name="hint_playerName">Placemark Title</string>
    <string name="hint_playerLastName">Description </string>
    <string name="hint_playerAge">Age </string>
    <string name="hint_playerPosition">Position </string>

    <string name="hint_numberOfBats">Number of Bats</string>
    <string name="hint_hits">Hits </string>
    <string name="hint_numberOfGames">Number of games </string>

    <!-- Map Strings -->


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="playerAverageHits">Average</string>
    <string name="actionset">Average</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- Strings for Card Layout -->
    <string name="currenttitle">Current Title</string>
    <string name="currentdescription">Current Description</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>