<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/registertitletext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/register"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textNoSuggestions"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/btnToLoginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textSize="16sp"
        android:textColor="@color/seed"
        android:textStyle="bold"/>

</LinearLayout>