<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlayerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="?attr/colorOnPrimary" />



    </com.google.android.material.appbar.AppBarLayout>



    <EditText
        android:id="@+id/playerName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginTop="144dp"
        android:autofillHints="hint"
        android:hint="@string/hint_playerName"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:layout_editor_absoluteX="-1dp" />

    <EditText
        android:id="@+id/playerLastName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginTop="24dp"
        android:autofillHints="hint"
        android:hint="@string/hint_playerLastName"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/playerName"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/playerAge"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginTop="24dp"
        android:autofillHints="hint"
        android:hint="@string/hint_playerAge"
        android:inputType="number"
        android:maxLength="50"
        android:maxLines="1"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/playerLastName"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/playerPosition"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginTop="24dp"
        android:autofillHints="hint"
        android:hint="@string/hint_playerPosition"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/playerAge"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="6dp"
        android:layout_marginTop="4dp"
        android:text="Stats"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/playerPosition"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/numberOfBats"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginTop="144dp"
        android:autofillHints="hint"
        android:hint="@string/hint_numberOfBats"
        android:inputType="number"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="-1dp" />


    <EditText
        android:id="@+id/hits"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginTop="24dp"
        android:autofillHints="hint"
        android:hint="@string/hint_hits"
        android:inputType="number"
        android:maxLength="50"
        android:maxLines="1"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/numberOfBats"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/numberOfGames"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginTop="24dp"
        android:autofillHints="hint"
        android:hint="@string/hint_numberOfGames"
        android:inputType="number"
        android:maxLength="50"
        android:maxLines="1"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/hits"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/chooseImage"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/colorSecondary"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/button_addImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfGames" />

    <Button
        android:id="@+id/playerLocation"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="?attr/colorSecondary"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/button_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/chooseImage"
        app:layout_constraintTop_toBottomOf="@+id/numberOfGames" />

    <ImageView
        android:id="@+id/playerImage"
        android:layout_width="150dp"
        android:layout_height="164dp"
        android:layout_margin="18dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerLocation"
        app:srcCompat="@mipmap/ic_launcher" />


</androidx.constraintlayout.widget.ConstraintLayout>